stage4/ex2/y.output
Terminals unused in grammar

    ASSGN


Grammar

    0 $accept: program $end

    1 program: Declarations KW_BEGIN Slist END SEMI
    2        | Declarations KW_BEGIN END SEMI

    3 Declarations: DECL DeclList ENDDECL
    4             | DECL ENDDECL

    5 DeclList: DeclList Decl
    6         | Decl

    7 Decl: Type VarList SEMI

    8 Type: T_INT
    9     | T_STR

   10 VarList: VarList COMMA ID
   11        | ID
   12        | VarList COMMA ID LBRACK NUM RBRACK
   13        | ID LBRACK NUM RBRACK
   14        | VarList COMMA MUL ID
   15        | MUL ID

   16 Slist: Slist Stmt
   17      | Stmt

   18 Stmt: InputStmt
   19     | OutputStmt
   20     | AsgStmt
   21     | IfStmt
   22     | WhileStmt
   23     | BrkStmt
   24     | ContStmt
   25     | repeatUntilStmt
   26     | doWhileStmt

   27 IfStmt: IF '(' expr ')' THEN Slist ELSE Slist ENDIF SEMI
   28       | IF '(' expr ')' THEN Slist ENDIF SEMI

   29 WhileStmt: WHILE '(' expr ')' DO Slist ENDWHILE SEMI

   30 BrkStmt: BREAK SEMI

   31 ContStmt: CONT SEMI

   32 repeatUntilStmt: REPEAT Slist UNTIL '(' expr ')' SEMI

   33 doWhileStmt: DO Slist WHILE '(' expr ')' SEMI

   34 InputStmt: READ '(' id ')' SEMI

   35 OutputStmt: WRITE '(' expr ')' SEMI

   36 AsgStmt: lvalue ASSIGN expr SEMI

   37 lvalue: id
   38       | MUL id

   39 expr: expr PLUS expr
   40     | expr MINUS expr
   41     | expr MUL expr
   42     | expr DIV expr
   43     | expr LT expr
   44     | expr GT expr
   45     | expr LE expr
   46     | expr GE expr
   47     | expr NE expr
   48     | expr EQ expr
   49     | '(' expr ')'
   50     | NUM
   51     | STRVAL
   52     | id
   53     | AND id
   54     | MUL id

   55 id: ID
   56   | ID LBRACK NUM RBRACK
   57   | ID LBRACK id RBRACK


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 27 28 29 32 33 34 35 49
    ')' (41) 27 28 29 32 33 34 35 49
    error (256)
    KW_BEGIN (258) 1 2
    END (259) 1 2
    READ (260) 34
    WRITE (261) 35
    PLUS (262) 39
    MINUS (263) 40
    MUL (264) 14 15 38 41 54
    DIV (265) 42
    NUM <node> (266) 12 13 50 56
    ID <node> (267) 10 11 12 13 14 15 55 56 57
    SEMI <node> (268) 1 2 7 27 28 29 30 31 32 33 34 35 36
    ASSIGN (269) 36
    STRVAL <node> (270) 51
    LE (271) 45
    LT (272) 43
    GE (273) 46
    GT (274) 44
    NE (275) 47
    EQ (276) 48
    IF (277) 27 28
    WHILE (278) 29 33
    ENDWHILE (279) 29
    ENDIF (280) 27 28
    DO (281) 29 33
    THEN (282) 27 28
    ELSE (283) 27
    BREAK (284) 30
    CONT (285) 31
    REPEAT (286) 32
    UNTIL (287) 32
    DECL (288) 3 4
    ENDDECL (289) 3 4
    T_INT (290) 8
    T_STR (291) 9
    COMMA (292) 10 12 14
    LBRACK (293) 12 13 56 57
    RBRACK (294) 12 13 56 57
    AND (295) 53
    ASSGN (296)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    program <node> (45)
        on left: 1 2
        on right: 0
    Declarations <node> (46)
        on left: 3 4
        on right: 1 2
    DeclList <node> (47)
        on left: 5 6
        on right: 3 5
    Decl <node> (48)
        on left: 7
        on right: 5 6
    Type <node> (49)
        on left: 8 9
        on right: 7
    VarList <node> (50)
        on left: 10 11 12 13 14 15
        on right: 7 10 12 14
    Slist <node> (51)
        on left: 16 17
        on right: 1 16 27 28 29 32 33
    Stmt <node> (52)
        on left: 18 19 20 21 22 23 24 25 26
        on right: 16 17
    IfStmt <node> (53)
        on left: 27 28
        on right: 21
    WhileStmt <node> (54)
        on left: 29
        on right: 22
    BrkStmt <node> (55)
        on left: 30
        on right: 23
    ContStmt <node> (56)
        on left: 31
        on right: 24
    repeatUntilStmt <node> (57)
        on left: 32
        on right: 25
    doWhileStmt <node> (58)
        on left: 33
        on right: 26
    InputStmt <node> (59)
        on left: 34
        on right: 18
    OutputStmt <node> (60)
        on left: 35
        on right: 19
    AsgStmt <node> (61)
        on left: 36
        on right: 20
    lvalue <node> (62)
        on left: 37 38
        on right: 36
    expr <node> (63)
        on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
        on right: 27 28 29 32 33 35 36 39 40 41 42 43 44 45 46 47 48 49
    id <node> (64)
        on left: 55 56 57
        on right: 34 37 38 52 53 54 57


State 0

    0 $accept: • program $end

    DECL  shift, and go to state 1

    program       go to state 2
    Declarations  go to state 3


State 1

    3 Declarations: DECL • DeclList ENDDECL
    4             | DECL • ENDDECL

    ENDDECL  shift, and go to state 4
    T_INT    shift, and go to state 5
    T_STR    shift, and go to state 6

    DeclList  go to state 7
    Decl      go to state 8
    Type      go to state 9


State 2

    0 $accept: program • $end

    $end  shift, and go to state 10


State 3

    1 program: Declarations • KW_BEGIN Slist END SEMI
    2        | Declarations • KW_BEGIN END SEMI

    KW_BEGIN  shift, and go to state 11


State 4

    4 Declarations: DECL ENDDECL •

    $default  reduce using rule 4 (Declarations)


State 5

    8 Type: T_INT •

    $default  reduce using rule 8 (Type)


State 6

    9 Type: T_STR •

    $default  reduce using rule 9 (Type)


State 7

    3 Declarations: DECL DeclList • ENDDECL
    5 DeclList: DeclList • Decl

    ENDDECL  shift, and go to state 12
    T_INT    shift, and go to state 5
    T_STR    shift, and go to state 6

    Decl  go to state 13
    Type  go to state 9


State 8

    6 DeclList: Decl •

    $default  reduce using rule 6 (DeclList)


State 9

    7 Decl: Type • VarList SEMI

    MUL  shift, and go to state 14
    ID   shift, and go to state 15

    VarList  go to state 16


State 10

    0 $accept: program $end •

    $default  accept


State 11

    1 program: Declarations KW_BEGIN • Slist END SEMI
    2        | Declarations KW_BEGIN • END SEMI

    END     shift, and go to state 17
    READ    shift, and go to state 18
    WRITE   shift, and go to state 19
    MUL     shift, and go to state 20
    ID      shift, and go to state 21
    IF      shift, and go to state 22
    WHILE   shift, and go to state 23
    DO      shift, and go to state 24
    BREAK   shift, and go to state 25
    CONT    shift, and go to state 26
    REPEAT  shift, and go to state 27

    Slist            go to state 28
    Stmt             go to state 29
    IfStmt           go to state 30
    WhileStmt        go to state 31
    BrkStmt          go to state 32
    ContStmt         go to state 33
    repeatUntilStmt  go to state 34
    doWhileStmt      go to state 35
    InputStmt        go to state 36
    OutputStmt       go to state 37
    AsgStmt          go to state 38
    lvalue           go to state 39
    id               go to state 40


State 12

    3 Declarations: DECL DeclList ENDDECL •

    $default  reduce using rule 3 (Declarations)


State 13

    5 DeclList: DeclList Decl •

    $default  reduce using rule 5 (DeclList)


State 14

   15 VarList: MUL • ID

    ID  shift, and go to state 41


State 15

   11 VarList: ID •
   13        | ID • LBRACK NUM RBRACK

    LBRACK  shift, and go to state 42

    $default  reduce using rule 11 (VarList)


State 16

    7 Decl: Type VarList • SEMI
   10 VarList: VarList • COMMA ID
   12        | VarList • COMMA ID LBRACK NUM RBRACK
   14        | VarList • COMMA MUL ID

    SEMI   shift, and go to state 43
    COMMA  shift, and go to state 44


State 17

    2 program: Declarations KW_BEGIN END • SEMI

    SEMI  shift, and go to state 45


State 18

   34 InputStmt: READ • '(' id ')' SEMI

    '('  shift, and go to state 46


State 19

   35 OutputStmt: WRITE • '(' expr ')' SEMI

    '('  shift, and go to state 47


State 20

   38 lvalue: MUL • id

    ID  shift, and go to state 21

    id  go to state 48


State 21

   55 id: ID •
   56   | ID • LBRACK NUM RBRACK
   57   | ID • LBRACK id RBRACK

    LBRACK  shift, and go to state 49

    $default  reduce using rule 55 (id)


State 22

   27 IfStmt: IF • '(' expr ')' THEN Slist ELSE Slist ENDIF SEMI
   28       | IF • '(' expr ')' THEN Slist ENDIF SEMI

    '('  shift, and go to state 50


State 23

   29 WhileStmt: WHILE • '(' expr ')' DO Slist ENDWHILE SEMI

    '('  shift, and go to state 51


State 24

   33 doWhileStmt: DO • Slist WHILE '(' expr ')' SEMI

    READ    shift, and go to state 18
    WRITE   shift, and go to state 19
    MUL     shift, and go to state 20
    ID      shift, and go to state 21
    IF      shift, and go to state 22
    WHILE   shift, and go to state 23
    DO      shift, and go to state 24
    BREAK   shift, and go to state 25
    CONT    shift, and go to state 26
    REPEAT  shift, and go to state 27

    Slist            go to state 52
    Stmt             go to state 29
    IfStmt           go to state 30
    WhileStmt        go to state 31
    BrkStmt          go to state 32
    ContStmt         go to state 33
    repeatUntilStmt  go to state 34
    doWhileStmt      go to state 35
    InputStmt        go to state 36
    OutputStmt       go to state 37
    AsgStmt          go to state 38
    lvalue           go to state 39
    id               go to state 40


State 25

   30 BrkStmt: BREAK • SEMI

    SEMI  shift, and go to state 53


State 26

   31 ContStmt: CONT • SEMI

    SEMI  shift, and go to state 54


State 27

   32 repeatUntilStmt: REPEAT • Slist UNTIL '(' expr ')' SEMI

    READ    shift, and go to state 18
    WRITE   shift, and go to state 19
    MUL     shift, and go to state 20
    ID      shift, and go to state 21
    IF      shift, and go to state 22
    WHILE   shift, and go to state 23
    DO      shift, and go to state 24
    BREAK   shift, and go to state 25
    CONT    shift, and go to state 26
    REPEAT  shift, and go to state 27

    Slist            go to state 55
    Stmt             go to state 29
    IfStmt           go to state 30
    WhileStmt        go to state 31
    BrkStmt          go to state 32
    ContStmt         go to state 33
    repeatUntilStmt  go to state 34
    doWhileStmt      go to state 35
    InputStmt        go to state 36
    OutputStmt       go to state 37
    AsgStmt          go to state 38
    lvalue           go to state 39
    id               go to state 40


State 28

    1 program: Declarations KW_BEGIN Slist • END SEMI
   16 Slist: Slist • Stmt

    END     shift, and go to state 56
    READ    shift, and go to state 18
    WRITE   shift, and go to state 19
    MUL     shift, and go to state 20
    ID      shift, and go to state 21
    IF      shift, and go to state 22
    WHILE   shift, and go to state 23
    DO      shift, and go to state 24
    BREAK   shift, and go to state 25
    CONT    shift, and go to state 26
    REPEAT  shift, and go to state 27

    Stmt             go to state 57
    IfStmt           go to state 30
    WhileStmt        go to state 31
    BrkStmt          go to state 32
    ContStmt         go to state 33
    repeatUntilStmt  go to state 34
    doWhileStmt      go to state 35
    InputStmt        go to state 36
    OutputStmt       go to state 37
    AsgStmt          go to state 38
    lvalue           go to state 39
    id               go to state 40


State 29

   17 Slist: Stmt •

    $default  reduce using rule 17 (Slist)


State 30

   21 Stmt: IfStmt •

    $default  reduce using rule 21 (Stmt)


State 31

   22 Stmt: WhileStmt •

    $default  reduce using rule 22 (Stmt)


State 32

   23 Stmt: BrkStmt •

    $default  reduce using rule 23 (Stmt)


State 33

   24 Stmt: ContStmt •

    $default  reduce using rule 24 (Stmt)


State 34

   25 Stmt: repeatUntilStmt •

    $default  reduce using rule 25 (Stmt)


State 35

   26 Stmt: doWhileStmt •

    $default  reduce using rule 26 (Stmt)


State 36

   18 Stmt: InputStmt •

    $default  reduce using rule 18 (Stmt)


State 37

   19 Stmt: OutputStmt •

    $default  reduce using rule 19 (Stmt)


State 38

   20 Stmt: AsgStmt •

    $default  reduce using rule 20 (Stmt)


State 39

   36 AsgStmt: lvalue • ASSIGN expr SEMI

    ASSIGN  shift, and go to state 58


State 40

   37 lvalue: id •

    $default  reduce using rule 37 (lvalue)


State 41

   15 VarList: MUL ID •

    $default  reduce using rule 15 (VarList)


State 42

   13 VarList: ID LBRACK • NUM RBRACK

    NUM  shift, and go to state 59


State 43

    7 Decl: Type VarList SEMI •

    $default  reduce using rule 7 (Decl)


State 44

   10 VarList: VarList COMMA • ID
   12        | VarList COMMA • ID LBRACK NUM RBRACK
   14        | VarList COMMA • MUL ID

    MUL  shift, and go to state 60
    ID   shift, and go to state 61


State 45

    2 program: Declarations KW_BEGIN END SEMI •

    $default  reduce using rule 2 (program)


State 46

   34 InputStmt: READ '(' • id ')' SEMI

    ID  shift, and go to state 21

    id  go to state 62


State 47

   35 OutputStmt: WRITE '(' • expr ')' SEMI

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 68
    id    go to state 69


State 48

   38 lvalue: MUL id •

    $default  reduce using rule 38 (lvalue)


State 49

   56 id: ID LBRACK • NUM RBRACK
   57   | ID LBRACK • id RBRACK

    NUM  shift, and go to state 70
    ID   shift, and go to state 21

    id  go to state 71


State 50

   27 IfStmt: IF '(' • expr ')' THEN Slist ELSE Slist ENDIF SEMI
   28       | IF '(' • expr ')' THEN Slist ENDIF SEMI

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 72
    id    go to state 69


State 51

   29 WhileStmt: WHILE '(' • expr ')' DO Slist ENDWHILE SEMI

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 73
    id    go to state 69


State 52

   16 Slist: Slist • Stmt
   33 doWhileStmt: DO Slist • WHILE '(' expr ')' SEMI

    READ    shift, and go to state 18
    WRITE   shift, and go to state 19
    MUL     shift, and go to state 20
    ID      shift, and go to state 21
    IF      shift, and go to state 22
    WHILE   shift, and go to state 74
    DO      shift, and go to state 24
    BREAK   shift, and go to state 25
    CONT    shift, and go to state 26
    REPEAT  shift, and go to state 27

    Stmt             go to state 57
    IfStmt           go to state 30
    WhileStmt        go to state 31
    BrkStmt          go to state 32
    ContStmt         go to state 33
    repeatUntilStmt  go to state 34
    doWhileStmt      go to state 35
    InputStmt        go to state 36
    OutputStmt       go to state 37
    AsgStmt          go to state 38
    lvalue           go to state 39
    id               go to state 40


State 53

   30 BrkStmt: BREAK SEMI •

    $default  reduce using rule 30 (BrkStmt)


State 54

   31 ContStmt: CONT SEMI •

    $default  reduce using rule 31 (ContStmt)


State 55

   16 Slist: Slist • Stmt
   32 repeatUntilStmt: REPEAT Slist • UNTIL '(' expr ')' SEMI

    READ    shift, and go to state 18
    WRITE   shift, and go to state 19
    MUL     shift, and go to state 20
    ID      shift, and go to state 21
    IF      shift, and go to state 22
    WHILE   shift, and go to state 23
    DO      shift, and go to state 24
    BREAK   shift, and go to state 25
    CONT    shift, and go to state 26
    REPEAT  shift, and go to state 27
    UNTIL   shift, and go to state 75

    Stmt             go to state 57
    IfStmt           go to state 30
    WhileStmt        go to state 31
    BrkStmt          go to state 32
    ContStmt         go to state 33
    repeatUntilStmt  go to state 34
    doWhileStmt      go to state 35
    InputStmt        go to state 36
    OutputStmt       go to state 37
    AsgStmt          go to state 38
    lvalue           go to state 39
    id               go to state 40


State 56

    1 program: Declarations KW_BEGIN Slist END • SEMI

    SEMI  shift, and go to state 76


State 57

   16 Slist: Slist Stmt •

    $default  reduce using rule 16 (Slist)


State 58

   36 AsgStmt: lvalue ASSIGN • expr SEMI

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 77
    id    go to state 69


State 59

   13 VarList: ID LBRACK NUM • RBRACK

    RBRACK  shift, and go to state 78


State 60

   14 VarList: VarList COMMA MUL • ID

    ID  shift, and go to state 79


State 61

   10 VarList: VarList COMMA ID •
   12        | VarList COMMA ID • LBRACK NUM RBRACK

    LBRACK  shift, and go to state 80

    $default  reduce using rule 10 (VarList)


State 62

   34 InputStmt: READ '(' id • ')' SEMI

    ')'  shift, and go to state 81


State 63

   54 expr: MUL • id

    ID  shift, and go to state 21

    id  go to state 82


State 64

   50 expr: NUM •

    $default  reduce using rule 50 (expr)


State 65

   51 expr: STRVAL •

    $default  reduce using rule 51 (expr)


State 66

   53 expr: AND • id

    ID  shift, and go to state 21

    id  go to state 83


State 67

   49 expr: '(' • expr ')'

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 84
    id    go to state 69


State 68

   35 OutputStmt: WRITE '(' expr • ')' SEMI
   39 expr: expr • PLUS expr
   40     | expr • MINUS expr
   41     | expr • MUL expr
   42     | expr • DIV expr
   43     | expr • LT expr
   44     | expr • GT expr
   45     | expr • LE expr
   46     | expr • GE expr
   47     | expr • NE expr
   48     | expr • EQ expr

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86
    MUL    shift, and go to state 87
    DIV    shift, and go to state 88
    LE     shift, and go to state 89
    LT     shift, and go to state 90
    GE     shift, and go to state 91
    GT     shift, and go to state 92
    NE     shift, and go to state 93
    EQ     shift, and go to state 94
    ')'    shift, and go to state 95


State 69

   52 expr: id •

    $default  reduce using rule 52 (expr)


State 70

   56 id: ID LBRACK NUM • RBRACK

    RBRACK  shift, and go to state 96


State 71

   57 id: ID LBRACK id • RBRACK

    RBRACK  shift, and go to state 97


State 72

   27 IfStmt: IF '(' expr • ')' THEN Slist ELSE Slist ENDIF SEMI
   28       | IF '(' expr • ')' THEN Slist ENDIF SEMI
   39 expr: expr • PLUS expr
   40     | expr • MINUS expr
   41     | expr • MUL expr
   42     | expr • DIV expr
   43     | expr • LT expr
   44     | expr • GT expr
   45     | expr • LE expr
   46     | expr • GE expr
   47     | expr • NE expr
   48     | expr • EQ expr

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86
    MUL    shift, and go to state 87
    DIV    shift, and go to state 88
    LE     shift, and go to state 89
    LT     shift, and go to state 90
    GE     shift, and go to state 91
    GT     shift, and go to state 92
    NE     shift, and go to state 93
    EQ     shift, and go to state 94
    ')'    shift, and go to state 98


State 73

   29 WhileStmt: WHILE '(' expr • ')' DO Slist ENDWHILE SEMI
   39 expr: expr • PLUS expr
   40     | expr • MINUS expr
   41     | expr • MUL expr
   42     | expr • DIV expr
   43     | expr • LT expr
   44     | expr • GT expr
   45     | expr • LE expr
   46     | expr • GE expr
   47     | expr • NE expr
   48     | expr • EQ expr

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86
    MUL    shift, and go to state 87
    DIV    shift, and go to state 88
    LE     shift, and go to state 89
    LT     shift, and go to state 90
    GE     shift, and go to state 91
    GT     shift, and go to state 92
    NE     shift, and go to state 93
    EQ     shift, and go to state 94
    ')'    shift, and go to state 99


State 74

   29 WhileStmt: WHILE • '(' expr ')' DO Slist ENDWHILE SEMI
   33 doWhileStmt: DO Slist WHILE • '(' expr ')' SEMI

    '('  shift, and go to state 100


State 75

   32 repeatUntilStmt: REPEAT Slist UNTIL • '(' expr ')' SEMI

    '('  shift, and go to state 101


State 76

    1 program: Declarations KW_BEGIN Slist END SEMI •

    $default  reduce using rule 1 (program)


State 77

   36 AsgStmt: lvalue ASSIGN expr • SEMI
   39 expr: expr • PLUS expr
   40     | expr • MINUS expr
   41     | expr • MUL expr
   42     | expr • DIV expr
   43     | expr • LT expr
   44     | expr • GT expr
   45     | expr • LE expr
   46     | expr • GE expr
   47     | expr • NE expr
   48     | expr • EQ expr

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86
    MUL    shift, and go to state 87
    DIV    shift, and go to state 88
    SEMI   shift, and go to state 102
    LE     shift, and go to state 89
    LT     shift, and go to state 90
    GE     shift, and go to state 91
    GT     shift, and go to state 92
    NE     shift, and go to state 93
    EQ     shift, and go to state 94


State 78

   13 VarList: ID LBRACK NUM RBRACK •

    $default  reduce using rule 13 (VarList)


State 79

   14 VarList: VarList COMMA MUL ID •

    $default  reduce using rule 14 (VarList)


State 80

   12 VarList: VarList COMMA ID LBRACK • NUM RBRACK

    NUM  shift, and go to state 103


State 81

   34 InputStmt: READ '(' id ')' • SEMI

    SEMI  shift, and go to state 104


State 82

   54 expr: MUL id •

    $default  reduce using rule 54 (expr)


State 83

   53 expr: AND id •

    $default  reduce using rule 53 (expr)


State 84

   39 expr: expr • PLUS expr
   40     | expr • MINUS expr
   41     | expr • MUL expr
   42     | expr • DIV expr
   43     | expr • LT expr
   44     | expr • GT expr
   45     | expr • LE expr
   46     | expr • GE expr
   47     | expr • NE expr
   48     | expr • EQ expr
   49     | '(' expr • ')'

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86
    MUL    shift, and go to state 87
    DIV    shift, and go to state 88
    LE     shift, and go to state 89
    LT     shift, and go to state 90
    GE     shift, and go to state 91
    GT     shift, and go to state 92
    NE     shift, and go to state 93
    EQ     shift, and go to state 94
    ')'    shift, and go to state 105


State 85

   39 expr: expr PLUS • expr

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 106
    id    go to state 69


State 86

   40 expr: expr MINUS • expr

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 107
    id    go to state 69


State 87

   41 expr: expr MUL • expr

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 108
    id    go to state 69


State 88

   42 expr: expr DIV • expr

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 109
    id    go to state 69


State 89

   45 expr: expr LE • expr

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 110
    id    go to state 69


State 90

   43 expr: expr LT • expr

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 111
    id    go to state 69


State 91

   46 expr: expr GE • expr

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 112
    id    go to state 69


State 92

   44 expr: expr GT • expr

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 113
    id    go to state 69


State 93

   47 expr: expr NE • expr

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 114
    id    go to state 69


State 94

   48 expr: expr EQ • expr

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 115
    id    go to state 69


State 95

   35 OutputStmt: WRITE '(' expr ')' • SEMI

    SEMI  shift, and go to state 116


State 96

   56 id: ID LBRACK NUM RBRACK •

    $default  reduce using rule 56 (id)


State 97

   57 id: ID LBRACK id RBRACK •

    $default  reduce using rule 57 (id)


State 98

   27 IfStmt: IF '(' expr ')' • THEN Slist ELSE Slist ENDIF SEMI
   28       | IF '(' expr ')' • THEN Slist ENDIF SEMI

    THEN  shift, and go to state 117


State 99

   29 WhileStmt: WHILE '(' expr ')' • DO Slist ENDWHILE SEMI

    DO  shift, and go to state 118


State 100

   29 WhileStmt: WHILE '(' • expr ')' DO Slist ENDWHILE SEMI
   33 doWhileStmt: DO Slist WHILE '(' • expr ')' SEMI

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 119
    id    go to state 69


State 101

   32 repeatUntilStmt: REPEAT Slist UNTIL '(' • expr ')' SEMI

    MUL     shift, and go to state 63
    NUM     shift, and go to state 64
    ID      shift, and go to state 21
    STRVAL  shift, and go to state 65
    AND     shift, and go to state 66
    '('     shift, and go to state 67

    expr  go to state 120
    id    go to state 69


State 102

   36 AsgStmt: lvalue ASSIGN expr SEMI •

    $default  reduce using rule 36 (AsgStmt)


State 103

   12 VarList: VarList COMMA ID LBRACK NUM • RBRACK

    RBRACK  shift, and go to state 121


State 104

   34 InputStmt: READ '(' id ')' SEMI •

    $default  reduce using rule 34 (InputStmt)


State 105

   49 expr: '(' expr ')' •

    $default  reduce using rule 49 (expr)


State 106

   39 expr: expr • PLUS expr
   39     | expr PLUS expr •
   40     | expr • MINUS expr
   41     | expr • MUL expr
   42     | expr • DIV expr
   43     | expr • LT expr
   44     | expr • GT expr
   45     | expr • LE expr
   46     | expr • GE expr
   47     | expr • NE expr
   48     | expr • EQ expr

    MUL  shift, and go to state 87
    DIV  shift, and go to state 88
    LE   shift, and go to state 89
    LT   shift, and go to state 90
    GE   shift, and go to state 91
    GT   shift, and go to state 92
    NE   shift, and go to state 93
    EQ   shift, and go to state 94

    $default  reduce using rule 39 (expr)


State 107

   39 expr: expr • PLUS expr
   40     | expr • MINUS expr
   40     | expr MINUS expr •
   41     | expr • MUL expr
   42     | expr • DIV expr
   43     | expr • LT expr
   44     | expr • GT expr
   45     | expr • LE expr
   46     | expr • GE expr
   47     | expr • NE expr
   48     | expr • EQ expr

    MUL  shift, and go to state 87
    DIV  shift, and go to state 88
    LE   shift, and go to state 89
    LT   shift, and go to state 90
    GE   shift, and go to state 91
    GT   shift, and go to state 92
    NE   shift, and go to state 93
    EQ   shift, and go to state 94

    $default  reduce using rule 40 (expr)


State 108

   39 expr: expr • PLUS expr
   40     | expr • MINUS expr
   41     | expr • MUL expr
   41     | expr MUL expr •
   42     | expr • DIV expr
   43     | expr • LT expr
   44     | expr • GT expr
   45     | expr • LE expr
   46     | expr • GE expr
   47     | expr • NE expr
   48     | expr • EQ expr

    LE  shift, and go to state 89
    LT  shift, and go to state 90
    GE  shift, and go to state 91
    GT  shift, and go to state 92
    NE  shift, and go to state 93
    EQ  shift, and go to state 94

    $default  reduce using rule 41 (expr)


State 109

   39 expr: expr • PLUS expr
   40     | expr • MINUS expr
   41     | expr • MUL expr
   42     | expr • DIV expr
   42     | expr DIV expr •
   43     | expr • LT expr
   44     | expr • GT expr
   45     | expr • LE expr
   46     | expr • GE expr
   47     | expr • NE expr
   48     | expr • EQ expr

    LE  shift, and go to state 89
    LT  shift, and go to state 90
    GE  shift, and go to state 91
    GT  shift, and go to state 92
    NE  shift, and go to state 93
    EQ  shift, and go to state 94

    $default  reduce using rule 42 (expr)


State 110

   39 expr: expr • PLUS expr
   40     | expr • MINUS expr
   41     | expr • MUL expr
   42     | expr • DIV expr
   43     | expr • LT expr
   44     | expr • GT expr
   45     | expr • LE expr
   45     | expr LE expr •
   46     | expr • GE expr
   47     | expr • NE expr
   48     | expr • EQ expr

    NE  shift, and go to state 93
    EQ  shift, and go to state 94

    LE  error (nonassociative)
    LT  error (nonassociative)
    GE  error (nonassociative)
    GT  error (nonassociative)

    $default  reduce using rule 45 (expr)


State 111

   39 expr: expr • PLUS expr
   40     | expr • MINUS expr
   41     | expr • MUL expr
   42     | expr • DIV expr
   43     | expr • LT expr
   43     | expr LT expr •
   44     | expr • GT expr
   45     | expr • LE expr
   46     | expr • GE expr
   47     | expr • NE expr
   48     | expr • EQ expr

    NE  shift, and go to state 93
    EQ  shift, and go to state 94

    LE  error (nonassociative)
    LT  error (nonassociative)
    GE  error (nonassociative)
    GT  error (nonassociative)

    $default  reduce using rule 43 (expr)


State 112

   39 expr: expr • PLUS expr
   40     | expr • MINUS expr
   41     | expr • MUL expr
   42     | expr • DIV expr
   43     | expr • LT expr
   44     | expr • GT expr
   45     | expr • LE expr
   46     | expr • GE expr
   46     | expr GE expr •
   47     | expr • NE expr
   48     | expr • EQ expr

    NE  shift, and go to state 93
    EQ  shift, and go to state 94

    LE  error (nonassociative)
    LT  error (nonassociative)
    GE  error (nonassociative)
    GT  error (nonassociative)

    $default  reduce using rule 46 (expr)


State 113

   39 expr: expr • PLUS expr
   40     | expr • MINUS expr
   41     | expr • MUL expr
   42     | expr • DIV expr
   43     | expr • LT expr
   44     | expr • GT expr
   44     | expr GT expr •
   45     | expr • LE expr
   46     | expr • GE expr
   47     | expr • NE expr
   48     | expr • EQ expr

    NE  shift, and go to state 93
    EQ  shift, and go to state 94

    LE  error (nonassociative)
    LT  error (nonassociative)
    GE  error (nonassociative)
    GT  error (nonassociative)

    $default  reduce using rule 44 (expr)


State 114

   39 expr: expr • PLUS expr
   40     | expr • MINUS expr
   41     | expr • MUL expr
   42     | expr • DIV expr
   43     | expr • LT expr
   44     | expr • GT expr
   45     | expr • LE expr
   46     | expr • GE expr
   47     | expr • NE expr
   47     | expr NE expr •
   48     | expr • EQ expr

    NE  shift, and go to state 93
    EQ  shift, and go to state 94

    $default  reduce using rule 47 (expr)


State 115

   39 expr: expr • PLUS expr
   40     | expr • MINUS expr
   41     | expr • MUL expr
   42     | expr • DIV expr
   43     | expr • LT expr
   44     | expr • GT expr
   45     | expr • LE expr
   46     | expr • GE expr
   47     | expr • NE expr
   48     | expr • EQ expr
   48     | expr EQ expr •
